# spatial-convertor

./: .pre-commit-config.yaml  pyproject.toml
accounts/: forms.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
pages/: urls.py  views.py
spatial_convertor/: admin.py  apps.py  convertor.py  forms.py  models.py  urls.py  views.py
spatial_convertor/migrations/: 0001_initial.py  0002_alter_spatiallayer_layer.py  0003_alter_spatiallayer_layer.py
templates/: base.html  home.html
templates/accounts/: login.html  signup.html
templates/spatial_convertor/: spatialrecord_form.html
